# skeleton_postgres_django_react

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/src/: manage.py
backend/src/inventory/: admin.py  models.py  serializers.py  urls.py  views.py
backend/src/inventory/migrations/: 0001_initial.py
backend/src/inventory/tests/: test_api.py
backend/src/inventory_project/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
